Fixing sidebar on mobile

--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -24,7 +24,7 @@ h3, h4, h5, h6
 
   +gt($tablet)
     > nav > ul > li.navbar-title
-      display: none
+      // display: none
 
   @media screen and (min-height: $phablet)
     // Notice this is min-height, not min-width
@@ -65,8 +65,10 @@ h3, h4, h5, h6
     width: 100%
     font-size: 1rem
     line-height: 2rem
-    background: desaturate(lighten(map-get($colors, blue), 38%), 30%)
-    min-height: 100vh
+
+    +gt($phablet)
+      background: desaturate(lighten(map-get($colors, blue), 38%), 30%)
+      min-height: 100vh
 
     @media screen and (max-width: $phablet)
       #toc
